For a documentation of all features, see
http://semantic-mediawiki.org/wiki/Semantic_Result_Formats


== SRF 1.8 ==

THIS IS NOT A RELEASE YET

Semantic Result Formats 1.8 is currently in beta-quality and is not recommended for use in
production until the actual release.

* ...

== SRF 1.7.1 ==

Released on Match 8, 2012.

* Fixed issue with the graphlenegd parameter in the graph format (bug 33745).
* Added 'default' parameter to math formats (bug 34983).

New formats in this version are:
* tree, ultree, oltree (written by Stephan Gambke)
* JitGraph (still in alpha, disabled by default) (written by Alex Shapovalov) (bug 32877)
* filtered (still in alpha, disabled by default) (written by Stephan Gambke)

== SRF 1.7 ==

Released on January 1, 2012.

* Compatibility with SMW 1.7 and later.
* Dropped support for MediaWiki 1.15.x and SMW < 1.7.
* Added warning message to jqplotpie and jqplotbar shown when there are no results instead of a non-working chart.
* Added value distribution support to jqplotpie and jqplotbar.
* Added min parameter to jqplotbar to set the minimun value for the Y-axis.
* Added pointlabel parameter to jqplotbar and chartlegend, legendlocation,
  datalabels and datalabeltype parameters to jqplotpie based on a patches by James Hong Kong.
* Made array and hash formats compatible with 'Array' extension 2.0 and 'HashTables' 1.0.
* Added summary parameter to the icalendar format.

New formats in this version are:
* valuerank (written by DaSch)
* D3Line, D3Bar and D3Treemap (written by James Hong Kong) (requires MW 1.17 or later)

== SRF 1.6.2 ==

Released on September 18, 2011.

* Fixed error in math printer when there are no numerical results. 
* Fixed vCard compatibility with SMW 1.6 and later.
* Fixed array compatibility with SMW 1.6 and later.
* Added median and product formats to the list of default enabled formats.

== SRF 1.6.1 ==

Released on August 20, 2011.

* Fixed rendering bug in the tagcloud format occuring for inline queries.