@@ -11,6 +11,9 @@ production until the actual release.
 
 * ...
 
+New formats in this version are:
+* slideshow (written by Stephan Gambke)
+
 == SRF 1.7.1 ==
 
 Released on Match 8, 2012.
